<resources>
    <string name="app_name">3TORStudio</string>
    <string name="head_text">Intent Examples:</string>
    <string name="btn1_text">Open New Common Activity</string>
    <string name="textNCA">Here I am. Your New Common Activity.</string>
    <string name="btn2_text">Send Message</string>
    <string name="btn3_text">Receive Message</string>
    <string name="text_BM">Im waiting for new message</string>
    <string name="btn_send">Send Back</string>
    <string name="btn4_text">Open www.3tor.pl</string>
    <string name="btn5_text">Send SMS</string>
    <string name="choser">Wysyłanie wiadomości...</string>
</resources>
