<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.a3torstudio.intentionex.MainActivity">

    <TextView
        android:id="@+id/headText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/head_text"
        android:textIsSelectable="false"
        android:textStyle="bold"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/btn1_text"
        android:textAllCaps="false"
        android:onClick="onClickNCA"
        android:layout_below="@+id/headText"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@+id/btn1"
        android:layout_alignStart="@+id/btn1"
        android:layout_alignEnd="@+id/btn1" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn2_text"
        android:layout_below="@+id/editText"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@+id/editText"
        android:textAllCaps="false"
        android:onClick="onClickSendMsg"
        android:layout_alignEnd="@+id/btn1" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn3_text"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/btn2"
        android:textAllCaps="false"
        android:layout_alignEnd="@+id/textBM"
        android:layout_alignStart="@+id/textBM"
        android:onClick="onClickReceiveMsg"/>

    <TextView
        android:id="@+id/textBM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn3"
        android:layout_marginTop="20dp"
        android:text="@string/text_BM"
        android:layout_alignStart="@+id/btn2"
        android:layout_alignEnd="@+id/btn2" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn4_text"
        android:textAllCaps="false"
        android:onClick="onClickOpenUrl"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/textBM"
        android:layout_alignStart="@+id/textBM"
        android:layout_alignEnd="@+id/textBM" />

    <EditText
        android:id="@+id/smsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn5"
        android:layout_alignStart="@+id/btn4"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_alignEnd="@+id/btn4" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn5_text"
        android:textAllCaps="false"
        android:onClick="onClickSendSMS"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/smsText"
        android:layout_alignEnd="@+id/smsText" />

</RelativeLayout>
